2008-09-26  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_shadow):
	Removes unnecessary MurrineRGB cast to fix build on solaris.
	(Bug #535456 of gtk-engines, patch by Damien Carbery)

2008-09-26  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_list_view_header):
	* src/murrine_style.c (murrine_style_draw_box):
	* src/murrine_types.h:
	Change the header button position enum to be a bitfield.
	(Bug #511958 of gtk-engines, Marcus Brinkmann)

2008-09-26  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_highlight_and_shade),
	(murrine_draw_frame):
	* src/murrine_draw_rgba.c (murrine_draw_highlight_and_shade),
	(murrine_rgba_draw_frame):
	Fixes bugs with rounded shadows

2008-09-26  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_box):
	Fixed a leak and a bug for rtl (right to left) progressbar's orientation

2008-09-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* TODO:
	Updated TODO

2008-09-14  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (get_decreased_gradient_shades):
	Fixed a bug of the gradients introduced in rev 65 :)

2008-09-13  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/animation.c:
	* src/animation.h:
	* src/cairo-support.c (get_decreased_gradient_shades):
	* src/cairo-support.h:
	* src/murrine_draw.c (murrine_draw_button),
	(murrine_draw_progressbar_fill), (murrine_draw_menubar),
	(murrine_draw_tab), (murrine_draw_list_view_header),
	(murrine_draw_menuitem), (murrine_draw_scrollbar_stepper),
	(murrine_draw_scrollbar_slider), (murrine_draw_tooltip):
	* src/murrine_draw.h:
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button),
	(murrine_rgba_draw_entry), (murrine_rgba_draw_progressbar_fill),
	(murrine_rgba_draw_menubar), (murrine_rgba_draw_tab),
	(murrine_rgba_draw_scrollbar_stepper),
	(murrine_rgba_draw_scrollbar_slider), (murrine_rgba_draw_tooltip):
	* src/murrine_rc_style.c: